--- a/app/src/main/res/layout/activity_add_and_edit_bewoners.xml
+++ b/app/src/main/res/layout/activity_add_and_edit_bewoners.xml
@@ -7,6 +7,25 @@
     android:layout_height="match_parent"
     tools:context=".add_and_edit_bewoners">
 
+    <Spinner
+        android:id="@+id/fotoAanpassen"
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
+        app:layout_constraintStart_toStartOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:text="Foto aanpassen"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.0" />
+
     <ImageButton
         android:id="@+id/IB_vGNaam"
         android:layout_width="wrap_content"
@@ -43,7 +62,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:text="Hier kun je vG namen aanpassen. Er moet weer vG staan in de naam. Dus: &quot;vG Blabla&quot;(zonder haakjes, duh)"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/textView6"
@@ -61,7 +80,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
         android:text="Hier kan je handmatig schoonmaak bier veranderen. De linker krijgt het van de rechter. "
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/textView5"
@@ -71,7 +90,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:text="Hier kun je iemand zijn vG status aanpassen"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -251,9 +270,8 @@
         android:id="@+id/volgordeToepassen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:onClick="volgordeToepassenClicked"
-        android:text="Toepassen"
+        android:text="Volgorde Toepassen"
         app:layout_constraintEnd_toEndOf="@+id/spinnerB5"
         app:layout_constraintTop_toBottomOf="@+id/b4" />
 
@@ -295,7 +313,6 @@
         android:layout_height="43dp"
         android:ems="10"
         android:inputType="numberSigned"
-        android:text="Getal"
         app:layout_constraintStart_toEndOf="@+id/spinner_WaardeKeuze"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -311,7 +328,7 @@
         android:id="@+id/isVgStatus"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="CheckBox"
+        android:text="is het een vG?"
         app:layout_constraintBottom_toBottomOf="@+id/vGVoornaam"
         app:layout_constraintStart_toEndOf="@+id/vGVoornaam"
         app:layout_constraintTop_toTopOf="@+id/vGVoornaam"
@@ -328,7 +345,7 @@
     <EditText
         android:id="@+id/SB_Waarde"
         android:layout_width="163dp"
-        android:layout_height="31dp"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberSigned"
         app:layout_constraintStart_toEndOf="@+id/spinner_SB_Geeft"
@@ -349,7 +366,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="vG Naam"
         app:layout_constraintStart_toEndOf="@+id/spinner_Voornaam_vG"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -362,6 +379,16 @@
         app:layout_constraintStart_toEndOf="@+id/SB_Waarde"
         app:layout_constraintTop_toTopOf="@+id/SB_Waarde"
         app:srcCompat="@android:drawable/ic_menu_send" />
+
+    <Button
+        android:id="@+id/fotoAanpassenBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:onClick="fotoKiezen"
+        android:text="Foto kiezen"
+        app:layout_constraintBottom_toBottomOf="@+id/fotoAanpassen"
+        app:layout_constraintStart_toEndOf="@+id/fotoAanpassen"
+        app:layout_constraintTop_toTopOf="@+id/fotoAanpassen" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
