--- a/app/src/main/res/layout/activity_schoonmaakbier_toevoegen.xml
+++ b/app/src/main/res/layout/activity_schoonmaakbier_toevoegen.xml
@@ -31,8 +31,8 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:onClick="substractSBSven"
-            app:layout_constraintStart_toStartOf="@+id/IG_SBSven"
-            app:layout_constraintTop_toBottomOf="@+id/IG_SBSven"
+            app:layout_constraintStart_toStartOf="@+id/IG_SB_B2"
+            app:layout_constraintTop_toBottomOf="@+id/IG_SB_B2"
             app:srcCompat="@android:drawable/button_onoff_indicator_on" />
 
         <ImageButton
@@ -40,9 +40,9 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:onClick="addSBSteven"
-            app:layout_constraintEnd_toEndOf="@+id/IG_SBSteven"
+            app:layout_constraintEnd_toEndOf="@+id/IG_SB_B5"
             app:layout_constraintStart_toEndOf="@+id/editTextSBSteven"
-            app:layout_constraintTop_toBottomOf="@+id/IG_SBSteven"
+            app:layout_constraintTop_toBottomOf="@+id/IG_SB_B5"
             app:srcCompat="@android:drawable/ic_input_add" />
 
         <EditText
@@ -61,7 +61,7 @@
             android:ems="10"
             android:inputType="numberSigned"
             app:layout_constraintStart_toEndOf="@+id/substractSBSteven"
-            app:layout_constraintTop_toBottomOf="@+id/IG_SBSteven" />
+            app:layout_constraintTop_toBottomOf="@+id/IG_SB_B5" />
 
         <EditText
             android:id="@+id/editTextSBSven"
@@ -73,15 +73,15 @@
             app:layout_constraintTop_toTopOf="@+id/substractB2" />
 
         <ImageButton
-            android:id="@+id/IG_SBEtienne"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:id="@+id/IG_SB_B3"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:longClickable="true"
             android:onClick="addSBEtienne"
-            android:scaleType="center"
+            android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/IG_SBSven"
-            app:layout_constraintTop_toTopOf="@+id/IG_SBSven"
+            app:layout_constraintStart_toEndOf="@+id/IG_SB_B2"
+            app:layout_constraintTop_toTopOf="@+id/IG_SB_B2"
             app:srcCompat="@drawable/ic_etienne" />
 
         <ImageButton
@@ -89,20 +89,20 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:onClick="addSBSven"
-            app:layout_constraintEnd_toEndOf="@+id/IG_SBSven"
+            app:layout_constraintEnd_toEndOf="@+id/IG_SB_B2"
             app:layout_constraintStart_toEndOf="@+id/editTextSBSven"
             app:layout_constraintTop_toTopOf="@+id/editTextSBSven"
             app:srcCompat="@android:drawable/ic_input_add" />
 
         <ImageButton
-            android:id="@+id/IG_SBSven"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:id="@+id/IG_SB_B2"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_marginTop="30dp"
             android:longClickable="true"
             android:onClick="addSBSven"
-            android:scaleType="center"
-            app:layout_constraintBottom_toTopOf="@+id/IG_SBRowin"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toTopOf="@+id/IG_SB_B4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.482"
             app:layout_constraintStart_toStartOf="parent"
@@ -115,8 +115,8 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:onClick="substractSBSteven"
-            app:layout_constraintStart_toStartOf="@+id/IG_SBSteven"
-            app:layout_constraintTop_toBottomOf="@+id/IG_SBSteven"
+            app:layout_constraintStart_toStartOf="@+id/IG_SB_B5"
+            app:layout_constraintTop_toBottomOf="@+id/IG_SB_B5"
             app:srcCompat="@android:drawable/button_onoff_indicator_on" />
 
         <ImageButton
@@ -124,8 +124,8 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:onClick="addSBRowin"
-            app:layout_constraintEnd_toEndOf="@+id/IG_SBRowin"
-            app:layout_constraintTop_toBottomOf="@+id/IG_SBRowin"
+            app:layout_constraintEnd_toEndOf="@+id/IG_SB_B4"
+            app:layout_constraintTop_toBottomOf="@+id/IG_SB_B4"
             app:srcCompat="@android:drawable/ic_input_add"
             tools:ignore="SpeakableTextPresentCheck" />
 
@@ -141,15 +141,15 @@
             tools:text="50" />
 
         <ImageButton
-            android:id="@+id/IG_SBThijs"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:id="@+id/IG_SB_B1"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:longClickable="true"
             android:onClick="addSBThijs"
-            android:scaleType="center"
-            app:layout_constraintEnd_toStartOf="@+id/IG_SBSven"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toStartOf="@+id/IG_SB_B2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/IG_SBSven"
+            app:layout_constraintTop_toTopOf="@+id/IG_SB_B2"
             app:srcCompat="@drawable/ic_thijs" />
 
         <EditText
@@ -165,15 +165,15 @@
             tools:text="0" />
 
         <ImageButton
-            android:id="@+id/IG_SBSteven"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:id="@+id/IG_SB_B5"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:longClickable="true"
             android:onClick="addSBSteven"
-            android:scaleType="fitXY"
-            app:layout_constraintEnd_toEndOf="@+id/IG_SBSven"
-            app:layout_constraintStart_toStartOf="@+id/IG_SBSven"
-            app:layout_constraintTop_toTopOf="@+id/IG_SBRowin"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="@+id/IG_SB_B2"
+            app:layout_constraintStart_toStartOf="@+id/IG_SB_B2"
+            app:layout_constraintTop_toTopOf="@+id/IG_SB_B4"
             app:srcCompat="@drawable/ic_vg" />
 
         <ImageButton
@@ -181,8 +181,8 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:onClick="substractSBRowin"
-            app:layout_constraintStart_toStartOf="@+id/IG_SBRowin"
-            app:layout_constraintTop_toBottomOf="@+id/IG_SBRowin"
+            app:layout_constraintStart_toStartOf="@+id/IG_SB_B4"
+            app:layout_constraintTop_toBottomOf="@+id/IG_SB_B4"
             app:srcCompat="@android:drawable/button_onoff_indicator_on" />
 
         <ImageButton
@@ -190,20 +190,20 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:onClick="substractSBThijs"
-            app:layout_constraintStart_toStartOf="@+id/IG_SBThijs"
-            app:layout_constraintTop_toBottomOf="@+id/IG_SBThijs"
+            app:layout_constraintStart_toStartOf="@+id/IG_SB_B1"
+            app:layout_constraintTop_toBottomOf="@+id/IG_SB_B1"
             app:srcCompat="@android:drawable/button_onoff_indicator_on" />
 
         <ImageButton
-            android:id="@+id/IG_SBRowin"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:id="@+id/IG_SB_B4"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_marginBottom="100dp"
             android:longClickable="true"
             android:onClick="addSBRowin"
-            android:scaleType="center"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/IG_SBSteven"
+            app:layout_constraintEnd_toStartOf="@+id/IG_SB_B5"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/ic_rowin" />
@@ -213,8 +213,8 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:onClick="substractSBEtienne"
-            app:layout_constraintStart_toStartOf="@+id/IG_SBEtienne"
-            app:layout_constraintTop_toBottomOf="@+id/IG_SBEtienne"
+            app:layout_constraintStart_toStartOf="@+id/IG_SB_B3"
+            app:layout_constraintTop_toBottomOf="@+id/IG_SB_B3"
             app:srcCompat="@android:drawable/button_onoff_indicator_on" />
 
         <ImageButton
@@ -228,13 +228,13 @@
 
         <ImageButton
             android:id="@+id/processSB"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:scaleType="centerCrop"
             android:onClick="processSB"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/IG_SBSteven"
-            app:layout_constraintTop_toTopOf="@+id/IG_SBRowin"
+            app:layout_constraintStart_toEndOf="@+id/IG_SB_B5"
+            app:layout_constraintTop_toTopOf="@+id/IG_SB_B4"
             app:srcCompat="@drawable/beer512" />
 
         <ImageButton
@@ -242,7 +242,7 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:onClick="addSBThijs"
-            app:layout_constraintEnd_toEndOf="@+id/IG_SBThijs"
+            app:layout_constraintEnd_toEndOf="@+id/IG_SB_B1"
             app:layout_constraintTop_toTopOf="@+id/substractSBThijs"
             app:srcCompat="@android:drawable/ic_input_add" />
     </androidx.constraintlayout.widget.ConstraintLayout>
